working with Codecademy chat

--- a/index.html
+++ b/index.html
@@ -7,27 +7,38 @@
   <body>
 
   <div class="header">
-    <h1>Broadway Design<h1>
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Work</li>
-        <li>Team</li>
-        <li>Contact</li>
+    <h1>Broadway Design</h1>
+
+      <div ="top-nav">
+        <p><a href="#home">Home</a></p>
+        <p><a href="#about">About</a></p>
+        <p><a href="#work">Work</a></p>
+        <p><a href="#team">Team</a></p>
+        <p><a href="#contact">Contact</a></p>
+      </ul>
+     </div>
+
   </div>
 
   <div class="process">
      <h2>Our Process</h2>
      <h3>Identify</h3>
+     <img src="resources/identify.svg">
      <p>We focus on the most important details.<p>
      <h3>Understand</h3>
+     <img src="resources/understand.svg">
      <p>We study our projects inside and out.</p>
      <h3>Execute</h3>
+     <img src="resources/execute.svg">
      <p>We put everyhting we have into our work.</p>
   </div>
 
   <div class="info">
-     <h3>Designed in New York</h3>
+
+     <div class="img, subheader">
+       <h3>Designed in New York</h3>
+     </div>
+
      <h3>Portfolio</h3>
      <p>Coming Soon</p>
      <h3>Team</h3>
@@ -35,16 +46,18 @@
      <h3>Contact</h3>
      <p>Phone: (555)-555-5555</p>
      <p>Email: test@example.com</p>
+
      <p>Twitter: @test</p>
   </div>
 
   <div class="footer">
      <p>© Broadway 2016
-     <a class="btn-nav">Home</a>
-     <a class="btn-nav">About</a>
-     <a class="btn-nav">Work</a>
-     <a class="btn-nav">Team</a>
-     <a class="btn-nav">Contact</a>
+     <a class="btn-nav" href="#home">Home</a>
+     <a class="btn-nav" href="#about">About</a>
+     <a class="btn-nav" href="work">Work</a>
+     <a class="btn-nav" href="team">Team</a>
+     <a class="btn-nav" href="contact">Contact</a>
      </p>
+   </div>
   </body>
 </html>
